[package]
name = "lpx-controller"
version = "0.2.2"
authors = ["wvengen"]

description = "Use the full power of the Launchpad X in a Linux studio setup"
repository = "https://github.com/wvengen/lpx-controller"
keywords = ["MIDI", "ALSA", "music"]
license = "GPL-3.0-or-later"
categories = ["multimedia::audio"]
readme = "README.md"
edition = "2018"

[dependencies]
rmididings = { version = "^0.2.1", default-features = false, features = ["alsa"] }
